--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 25
@@ -26,9 +27,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    apply plugin: 'com.google.gms.google-services'
 
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.android.support:design:25.0.0'
+    /*compile 'com.google.android.gms:play-services:9.0.0'*/
+    testCompile 'junit:junit:4.12'
 }
