--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:design:25.0.0'
-    compile 'com.google.android.gms:play-services:9.8.0'
+    /*compile 'com.google.android.gms:play-services:9.8.0'*/
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
