login com o facebook em principio tmb

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,19 +33,19 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-/*
-    -- compile 'com.google.android.gms:play-services:9.8.0'
 
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    //compile 'com.google.android.gms:play-services:9.8.0'
+
+    //Facebook
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    */
+
 
     // Google
-    compile 'com.google.android.gms:play-services-auth:10.0.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
 
     //Firebase
-    compile 'com.google.firebase:firebase-auth:10.0.0'
-    compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
