--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,25 +33,23 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
-    //compile 'com.google.android.gms:play-services:9.8.0'
-
-    //Facebook
+    // Facebook
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
 
     // Google
     compile 'com.google.android.gms:play-services-auth:10.0.1'
 
-    //Firebase
+    // Firebase
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
 
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    testCompile 'junit:junit:4.12'
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
 apply plugin: 'com.google.gms.google-services'
