--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.appengine:gradle-appengine-plugin:1.9.34'
+
+
     }
 }
 
@@ -26,6 +28,24 @@ dependencies {
     compile 'com.google.appengine:appengine-endpoints:1.9.34'
     compile 'com.google.appengine:appengine-endpoints-deps:1.9.34'
     compile 'javax.servlet:servlet-api:2.5'
+    compile 'com.google.appengine:appengine-api-1.0-sdk:1.9.48'
+    compile 'org.apache.httpcomponents:httpclient-osgi:4.5.2'
+    compile 'com.google.firebase:firebase-server-sdk:3.0.3'
+    compile 'com.google.firebase:firebase-admin:4.0.3'
+
+
+
+    compile files('src/main/webapp/WEB-INF/lib/jersey-client-1.19.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jackson-core-asl-1.9.2.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jackson-jaxrs-1.9.2.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jackson-xc-1.9.2.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jersey-core-1.19.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jersey-json-1.19.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jersey-server-1.19.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jersey-servlet-1.19.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jettison-1.1.jar')
+    compile files('src/main/webapp/WEB-INF/lib/jsr311-api-1.1.1.jar')
 }
 
 appengine {
