--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,19 @@ dependencies {
     // Firebase
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-config:10.0.1'
+    compile 'com.google.android.gms:play-services-appinvite:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+
+    // Firebase UI
+    compile 'com.firebaseui:firebase-ui-database:0.4.0'
 
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     testCompile 'junit:junit:4.12'
     compile project(path: ':backend', configuration: 'android-endpoints')
